[package]
name = "wasm"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.40"
petgraph = "0.5.1"
rand = "0.7.3"
serde = "1.0.59"
serde_derive = "1.0.59"
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
